# learning

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  dvc.yaml  pyproject.toml  requirements.txt  setup.py  ticket_price.ipynb
.dvc/: config
.github/actions/prepare-env/: action.yaml
.github/workflows/: pull-request.yaml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
data/raw/: .gitignore  itineraries_random_2M.csv.dvc
docs/: Makefile  conf.py  index.rst  make.bat
models/: model.cbm
notebooks/: ticket_price.ipynb
reports/: score.csv
src/data/: clean.py  prepare_airport_coords.py
src/features/: build_features.py
src/models/: evaluate.py  train_model.py  train_test_split.py
